--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stylelint": "^14.11.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,6 +25,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard-scss"
   },
   "browserslist": {
     "production": [
